--- a/webox-admin/package.json
+++ b/webox-admin/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.81.0"
   },
   "scripts": {
     "start": "craco start",
