--- a/webox-admin/package.json
+++ b/webox-admin/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
     "antd": "^5.4.5",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
