--- a/webox-admin/package.json
+++ b/webox-admin/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "webpack": "^5.81.0"
   },
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "eslint": "^8.39.0",
