--- a/webox-admin/package.json
+++ b/webox-admin/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.24",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
+    "@wangeditor/editor-for-react": "^1.0.6",
     "antd": "^5.4.5",
     "axios": "^1.4.0",
     "braft-editor": "^2.3.9",
